--- a/package.json
+++ b/package.json
@@ -12,22 +12,21 @@
   "author": "Lara Franke",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^27.0.2",
     "@types/mongodb": "^4.0.7",
-    "jest": "^27.3.1",
     "mongodb": "^4.7.0",
     "prompts": "^2.4.2",
-    "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.5",
     "@types/node": "^18.0.3",
-    "@types/prompts": "^2.0.14"
+    "@types/prompts": "^2.0.14",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.4"
   },
-
   "repository": {
     "type": "git",
     "url": "Softwaredesign"
